--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     />
   </head>
   <body>
-    <div class="container">
+    <main class="container">
       <div class="left">
         <h1>Get <span>insights</span> that help<br />your business grow.</h1>
-        <h5>
+        <h4>
           Discover the benefits of data analytics and make<br />better decisions
           regarding revenue, customer<br />experience, and overall efficiency.
-        </h5>
+        </h4>
         <div class="data-list">
           <div class="data-item">
             <span class="data-number">10k+</span>
@@ -49,12 +49,12 @@
       <div class="pic">
         <img src="images\image-header-desktop.jpg" alt="pic" />
       </div>
-    </div>
-    <div class="attribution">
+    </main>
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="https://github.com/Moonir300">Moonir300</a>.
-    </div>
+    </footer>
   </body>
 </html>
